# point2ellipse_series

./: .gitignore  README.md  coefficients.py  ellipse.py  main.py  polynomials.py  series.py  symbols.py  util.py
cpp/: CMakeLists.txt  cache.hpp  coefficients.cpp  coefficients.hpp  coefficients_evo.cpp  coefficients_evo.hpp  ellipse.hpp  ellipse_params.hpp  fourier_series.hpp  fourier_series_accum.hpp  fourier_series_evo.hpp  fourier_series_evo_se.hpp  fourier_series_se.hpp  lexpr.hpp  main.cpp  polynomials.hpp  series.cpp  series.hpp  series_substitution.hpp  series_traits.hpp  series_traits_se.hpp  stirling.hpp  sweep_evo.cpp  symbols.hpp  util.hpp
cpp/benchmarks/: bench_coefficients.cpp  bench_series_evo.cpp  run_benchmarks.sh
cpp/convergence/: diag_coeff_evo.cpp  fourier_series_accum.hpp  sweep_evo.cpp
cpp/tests/: CMakeLists.txt  test_coefficients.cpp  test_lexpr.cpp  test_series.cpp  test_series_evo.cpp  test_stirling.cpp
python/: cache.py  coefficients.py  ellipse.py  fourier_series.py  generate_test_data.py  main.py  plot_diag_coeff_evo.py  plot_sweep_evo.py  polynomials.py  series.py  series_substitutions.py  symbols.py  util.py
python/tests/: pytest.ini  pytest_util.py  test_series.py  test_series_evo.py
